# MoPCore-2

./: CMakeLists.txt  COPYING  PreLoad.cmake  README.md  THANKS  revision.h.in.cmake
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/icc/: settings.cmake
cmake/compiler/mingw/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: CheckBuildDir.cmake  CheckPlatform.cmake  EnsureVersion.cmake  FindACE.cmake  FindGit.cmake  FindMySQL.cmake  FindOpenSSL.cmake  FindPCHSupport.cmake  FindReadline.cmake
cmake/platform/: cmake_uninstall.in.cmake  settings.cmake
cmake/platform/unix/: settings.cmake
cmake/platform/win/: settings.cmake
contrib/conf_merge/: index.php  merge.php  tc-conf-merger.pl
dep/: CMakeLists.txt  PackageList.txt
dep/StormLib/: CMakeLists.txt
dep/acelite/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt  tc_upgrades.txt
dep/jemalloc/: CMakeLists.txt  jemalloc_defs.h.in.cmake
dep/mysqllite/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
sql/: README.md
sql/base/: auth_database.sql  characters_database.sql
sql/create/: drop_mysql.sql
src/: CMakeLists.txt
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h  TOTP.cpp  TOTP.h
src/server/authserver/PrecompiledHeaders/: authPCH.cpp  authPCH.h
src/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h  RealmSocket.cpp  RealmSocket.h
src/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  RegularGrid.h  VMapDefinitions.h  VMapTools.h
src/server/collision/Management/: IVMapManager.h  MMapFactory.cpp  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/server/collision/Maps/: MapTree.cpp  MapTree.h  (+2 more)
src/server/game/: CMakeLists.txt
src/server/shared/: AutoPtr.h  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Containers.h  Define.h  Memory.h  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  worldserver.conf.dist  worldserver.rc
src/tools/: CMakeLists.txt
src/tools/map_extractor/: CMakeLists.txt  System.cpp  adt.h  dbcfile.cpp  dbcfile.h  loadlib.cpp  wdt.h
src/tools/mmaps_generator/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp
src/tools/vmap4_assembler/: CMakeLists.txt  VMapAssembler.cpp
src/tools/vmap4_extractor/: CMakeLists.txt  adtfile.cpp  adtfile.h  dbcfile.cpp  dbcfile.h  gameobject_extract.cpp  model.cpp  model.h  modelheaders.h  mpqfile.cpp  mpqfile.h  vec3d.h  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wdtfile.h  wmo.cpp  wmo.h
(+751 files in other folders)
